tests/fail/service_struct.rs
use capabilities_derive::service;

#[service]
struct Database {
    pub _db: String,
}

#[allow(dead_code)]
fn main() {

}