tests/fail/service_struct.stderr
error: Unsupported literal, has to be a type from Capabilities lib
 --> tests/fail/service_struct.rs:3:1
  |
3 | #[service]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `service` (in Nightly builds, run with -Z macro-backtrace for more info)

error: custom attribute panicked
 --> tests/fail/service_struct.rs:3:1
  |
3 | #[service]
  | ^^^^^^^^^^
  |
  = help: message: called `Option::unwrap()` on a `None` value
